fix: Fixed alignment of highlighted premium plan tab

--- a/static/css/pages/premium.css
+++ b/static/css/pages/premium.css
@@ -403,6 +403,7 @@ html {
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
     background-color: #0797E1;
+    outline: 1px solid #0797E1;
     line-height: 2.5rem;
     font-size: 0.0.875rem;
     color: #fff;
